SubBt/force-app/main/default/objects/Check_In__c/Check_In__c.object-meta.xml
<CustomObject>
    <description>Use this object to track daily Check-In&apos;s for your Project.</description>
    <label>Check-In</label>
    <nameField>
        <label>Check In Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Check-In&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>