SubBt/force-app/main/default/objects/Check_In__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Work Stoppage</fullName>
            </value>
            <value>
                <fullName>Union Issue</fullName>
            </value>
            <value>
                <fullName>Labor Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>