SubBt/force-app/main/default/objects/Check_In__c/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <inlineHelpText>Date the Check-In record was created.</inlineHelpText>
    <label>Date Created</label>
    <type>Date</type>
</CustomField>