SubBt/force-app/main/default/objects/Check_In__c/fields/Date_Created_Ts__c.field-meta.xml
<CustomField>
    <fullName>Date_Created_Ts__c</fullName>
    <label>Date Created TS</label>
    <type>DateTime</type>
</CustomField>