SubBt/force-app/main/default/objects/Check_In__c/fields/Days_Lost__c.field-meta.xml
<CustomField>
    <fullName>Days_Lost__c</fullName>
    <inlineHelpText>Number of Days Lost on the Project.</inlineHelpText>
    <label>Days Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>