SubBt/force-app/main/default/objects/Check_In__c/fields/Incident_Date__c.field-meta.xml
<CustomField>
    <fullName>Incident_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <inlineHelpText>Date and Time the Incident Occured</inlineHelpText>
    <label>Incident Date</label>
    <type>DateTime</type>
</CustomField>