SubBt/force-app/main/default/objects/Check_In__c/fields/Logged_Location__c.field-meta.xml
<CustomField>
    <fullName>Logged_Location__c</fullName>
    <label>Logged Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>