SubBt/force-app/main/default/objects/Check_In__c/fields/Moister_Reading__c.field-meta.xml
<CustomField>
    <fullName>Moister_Reading__c</fullName>
    <label>Moister Reading</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>