SubBt/force-app/main/default/objects/Check_In__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Site Prep</fullName>
            </value>
            <value>
                <fullName>Below Ground Rough</fullName>
            </value>
            <value>
                <fullName>Phase 1 Construction</fullName>
            </value>
            <value>
                <fullName>Phase 2 Construction</fullName>
            </value>
            <value>
                <fullName>Above Ground Rough</fullName>
            </value>
            <value>
                <fullName>Above Ground Finish</fullName>
            </value>
            <value>
                <fullName>Close Out</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>