SubBt/force-app/main/default/objects/Check_In__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Check-In&apos;s</relationshipLabel>
    <relationshipName>Check_In_s</relationshipName>
    <type>Lookup</type>
</CustomField>