SubBt/force-app/main/default/objects/Check_In__c/fields/Vendor_Resource__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Check-In&apos;s</relationshipLabel>
    <relationshipName>Check_In_s</relationshipName>
    <type>Lookup</type>
</CustomField>