SubBt/force-app/main/default/objects/Check_In__c/fields/Weather__c.field-meta.xml
<CustomField>
    <fullName>Weather__c</fullName>
    <label>Weather</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sunny</fullName>
                <default>true</default>
                <label>Sunny</label>
            </value>
            <value>
                <fullName>Raining</fullName>
            </value>
            <value>
                <fullName>Rained-Out</fullName>
            </value>
            <value>
                <fullName>Windy</fullName>
            </value>
            <value>
                <fullName>EarthQuake</fullName>
            </value>
            <value>
                <fullName>Thunderstorm</fullName>
            </value>
            <value>
                <fullName>Drizzle</fullName>
            </value>
            <value>
                <fullName>Rain</fullName>
            </value>
            <value>
                <fullName>Snow</fullName>
            </value>
            <value>
                <fullName>Mist</fullName>
            </value>
            <value>
                <fullName>Smoke</fullName>
            </value>
            <value>
                <fullName>Haze</fullName>
            </value>
            <value>
                <fullName>Dust</fullName>
            </value>
            <value>
                <fullName>Fog</fullName>
            </value>
            <value>
                <fullName>Ash</fullName>
            </value>
            <value>
                <fullName>Squall</fullName>
            </value>
            <value>
                <fullName>Tornado</fullName>
            </value>
            <value>
                <fullName>Clouds</fullName>
            </value>
            <value>
                <fullName>Clear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>