SubBt/force-app/main/default/objects/Check_In__c/recordTypes/Existing_Check_In.recordType-meta.xml
<RecordType>
    <fullName>Existing_Check_In</fullName>
    <active>true</active>
    <label>Existing Check-In</label>
</RecordType>