SubBt/force-app/main/default/objects/Check_In__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <columns>Complete__c</columns>
    <columns>Date_Created__c</columns>
    <columns>Phase__c</columns>
    <columns>Trade_Type__c</columns>
    <columns>Days_Lost__c</columns>
    <columns>Notes__c</columns>
    <columns>Weather__c</columns>
    <columns>Vendor__c</columns>
    <columns>Vendor_Resource__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>